Improve REST and follow SOLID
